--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="text" maxlength=20 id="custominput" placeholder="Custom Short Link">
                 <p id="erbox" style="color:red;"></p>
             </div>
-            <button id="sbtn" type="button" class="btn"> ðŸ”— Shorten Me</button>
+            <button id="sbtn" type="button" class="btn">🔗 Shorten Me</button>
         </div>
         <br>
         <div class="form" style="margin-bottom : 0px !important;">
@@ -27,7 +27,7 @@
             <p id="sucess" style="color:cyan"></p>
         </div>
         <footer class="infos">
-            <p class="small-text" style="color:red;">âš ï¸ WARNING âš ï¸ <br>SINCE THIS IS A STATIC URL SHORTENER AND THERE IS NO SERVER SIDE ALL THE URLS ARE SAVED IN A PUBLIC JSON DATABASE! <br><br><strong>DO NOT UPLOAD URLS THAT CONTAIN PERSONAL INFO!</strong></p>
+            <p class="small-text" style="color:red;">⚠️ WARNING ⚠️<br>SINCE THIS IS A STATIC URL SHORTENER AND THERE IS NO SERVER SIDE ALL THE URLS ARE SAVED IN A PUBLIC JSON DATABASE! <br><br><strong>DO NOT UPLOAD URLS THAT CONTAIN PERSONAL INFO!</strong></p>
             <p><strong> Source:
                     <a href="https://github.com/xTapG/No-db-Url-Shortener/tree/master#shrt---no-db--database-url-shortener">GitHub</a></strong>
             </p>
